按钮权限，角色代码提交