@@ -18,10 +18,7 @@ import org.springframework.web.servlet.mvc.method.RequestMappingInfo;
 import org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping;
 
 import javax.annotation.Resource;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 /**
  * sa牌配置
@@ -52,18 +49,20 @@ public class SaTokenConfigure implements WebMvcConfigurer {
 
         // 注册Sa-Token的路由拦截器，并排除登录接口或其他可匿名访问的接口地址 (与注解拦截器无关)
         registry.addInterceptor(new SaAnnotationInterceptor())
-                .excludePathPatterns(Arrays.asList("/api/auth/login",
-                        "/api/auth/register",
-                        "/doc.html",
-                        "/swagger-ui.html",
-                        "/favicon.ico",
-                        "/**/*.html",
-                        "/**/*.css",
-                        "/**/*.js",
-                        "/swagger-resources/**",
-                        "/swagger-resources/**/**",
-                        "/v2/api-docs",
-                        "/v2/api-docs/**")
+                .excludePathPatterns(
+                        List.of("/**")
+//                        Arrays.asList("/api/auth/login",
+//                                "/api/auth/register",
+//                                "/doc.html",
+//                                "/swagger-ui.html",
+//                                "/favicon.ico",
+//                                "/**/*.html",
+//                                "/**/*.css",
+//                                "/**/*.js",
+//                                "/swagger-resources/**",
+//                                "/swagger-resources/**/**",
+//                                "/v2/api-docs",
+//                                "/v2/api-docs/**")
                 )
                 .addPathPatterns("/**");
     }
